# vmlinux-to-elf

./: pyproject.toml
vmlinux_to_elf/: architecture_detecter.py  elf_symbolizer.py  kallsyms_finder.py  main.py  tests.py  vmlinuz_decompressor.py
